"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2009-11-05	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-46:
	  hacknet: added option to emit demangling information in comments.
		Also added comment_prefix configuration option.
	  Documented and tested.


2009-11-03	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-45:
	  instance-supply-overrides: changed override ordering (now: 
		Vdd [, GND]) to be reverse of the implicit port 
		declarations (GND, Vdd), for the sake of consistency.
		Since the true formal ordering is unchanged, the resulting
		netlists still follow the GND-first convention.
		Best of both worlds, at the cost of a sneaky
		reverse-ordering implementation.
	  Documentation updated, test cases updated -- only 
		inputs to hacknet were re-written with new order!


2009-10-30	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-44:
	  No source revision, only updated 
		lib/verilog/wrap_verilog_modules_to_hacprsim.awk
		and added some associated co-simulation tests.


2009-10-28	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-43-d:
	  Clean-up only (no tag): perm'd CFLAT_WITH_CONDUCTANCES:1.


	* HACKT-00-01-04-main-00-83-43-c:
	  Clean-up only (no tag): perm'd PRS_LITERAL_ATTRIBUTES:1.


	* HACKT-00-01-04-main-00-83-43-b:
	  Clean-up only (no tag): perm'd hcaknet's caching of node names.


2009-10-28	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-43:
	  hacknet: added cae-sensitivity checking (on by default)
		with option case_collision=[ignore|warn|error].
		added reserved_name configuration option that accumulates
		reserved names of nodes to check against during 
		generation, comparing against post-case-converted, 
		and post-mangled names.  
		Now checks for post-mangling name collisions.