@@ -1,0 +1,12 @@
+// "aliases-03.hac"
+// @hacknet-flags@ -T inv -f emit_node_aliases=1
+
+defproc inv(bool x, y) {
+bool j, k;
+j = x;
+k = y;
+prs {
+	x	=> y-
+}
+}
+
