@@ -3,6 +3,7 @@ area_unit=
 case_collision=warn
 comment_prefix=* 
 emit_mangle_map=0
+emit_node_aliases=0
 emit_parasitics=0
 emit_top=1
 empty_subcircuits=0
